traefik-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`tomcat.localhost`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: coffee-svc
      port: 80
